// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Picker__InputContainer-sc-1xwpkqn-0 ciLHEA"
    id="standard"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Draw Tools Color Picker
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
      id={null}
      rows={null}
    >
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 jvIyJJ"
        color="#E4423A"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 fUNywH"
        color="#FF8000"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 eHeTdp"
        color="#FFBF00"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="check"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 EVtwl"
        color="#14A939"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 dujmkn"
        color="#2F98EE"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
    </section>
  </section>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Picker__InputContainer-sc-1xwpkqn-0 ciLHEA"
    id="toggleSelect"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Standard Swatches
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 huKtjk"
      id={null}
      rows={null}
    >
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 jvIyJJ"
        color="#E4423A"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 EVtwl"
        color="#14A939"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 dujmkn"
        color="#2F98EE"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
    </section>
  </section>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Picker__InputContainer-sc-1xwpkqn-0 ciLHEA"
    id="square"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Square Swatches
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 huKtjk"
      id={null}
      rows={null}
    >
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 dspUkp"
        color="#E4423A"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 kzLhTN"
        color="#14A939"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 gjdaCT"
        color="#2F98EE"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
    </section>
  </section>
</div>
`;
